# guardsense-system2

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  data.yaml  eval.yaml  fusion.yaml  fusion_example_event.json  fusion_example_output.json  fusion_runtime.yaml  infer.yaml  runtime.yaml  train.yaml  trigger.yaml  trigger_data.yaml  trigger_eval.yaml  trigger_train.yaml  verifier.yaml  verifier_data.yaml  verifier_eval.yaml  verifier_train.yaml
src/common/: config_utils.py  io_utils.py  labels.py  logging_utils.py  metrics.py  runtime_utils.py  seed.py
src/data/: dataset_indexer.py  pose_preprocess.py  split_manager.py  trigger_dataset.py  verifier_dataset.py  video_preprocess.py
src/fusion/: __init__.py  decision_logic.py  event_schema.py  frigate_adapter.py
src/scripts/: _bootstrap.py  eval_trigger.py  eval_verifier.py  prepare_trigger_data.py  prepare_verifier_data.py  run_dual_inference.py  run_full_pipeline.py  train_trigger.py  train_verifier.py
src/trigger/: evaluate.py  infer.py  model.py  train.py
src/verifier/: __init__.py  evaluate.py  infer.py  model.py  train.py
tests/: test_runtime_utils.py  test_smoke_pipeline.py
